Login screen, Register screen and Search games screen added

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "reacnativeapp",
-    "slug": "reacnativeapp",
+    "name": "e18b3ebc9",
+    "slug": "e18b3ebc9",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
