--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "react-native-paper": "^4.12.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.10.1",
+    "react-native-star-rating": "^1.1.0",
+    "react-native-star-rating-widget": "^1.2.0",
+    "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-router-native": "^6.3.0",
     "styled-components": "^5.3.5",
-    "styled-system": "^5.1.5",
-    "react-native-svg": "12.1.1"
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
