--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+	"@react-native-firebase/app": "^6.4.0",
+    "@react-native-firebase/firestore": "^6.4.0",
     "@apollo/client": "^3.5.10",
+    "@config-plugins/react-native-webrtc": "^2.1.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.1",
     "@types/react-native": "^0.67.3",
     "axios": "^0.26.1",
     "expo": "~44.0.0",
+    "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "graphql": "^16.3.0",
     "native-base": "^3.3.11",
@@ -31,14 +35,21 @@
     "react-native-svg": "12.1.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
+    "react-native-webrtc": "^1.100.0",
     "react-router-native": "^6.3.0",
     "styled-components": "^5.3.5",
-    "styled-system": "^5.1.5",
-    "expo-image-picker": "~12.0.1"
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+	"@babel/runtime": "^7.6.2",
+    "@react-native-community/eslint-config": "^0.0.5",
+    "babel-jest": "^24.9.0",
+    "eslint": "^6.5.1",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.58.0",
+    "react-test-renderer": "16.11.0"
   },
   "private": true
 }
