--- a/ios/Podfile
+++ b/ios/Podfile
@@ -49,6 +49,8 @@ end
 
 target 'webrtc_firebase' do
   use_expo_modules!
+  pod 'rn-fetch-blob', :path => '../node_modules/rn-fetch-blob'
+
   post_integrate do |installer|
     begin
       expo_patch_react_imports!(installer)
