--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": ">=44.0.0-0 <45.0.0",
     "expo-image-picker": "~12.0.1",
     "graphql": "^16.3.0",
+    "mime": "^3.0.0",
     "native-base": "^3.3.11",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -37,6 +38,7 @@
     "react-native-web": "0.17.1",
     "react-native-webrtc": "^1.100.0",
     "react-router-native": "^6.3.0",
+    "rn-fetch-blob": "^0.12.0",
     "styled-components": "^5.3.5",
     "styled-system": "^5.1.5"
   },
